<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.UploadDocs"
              android:orientation="vertical"
              android:background="#ffffff"
              android:id="@+id/upload_docs">


    <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <ImageView
                android:id="@+id/back_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/white_back_arrow"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_document"
                android:layout_marginBottom="15dp"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>
    </RelativeLayout>
    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/personal_document"
              android:layout_margin="15dp"
              android:textSize="20sp"
              android:textColor="#000000"
              android:textStyle="bold"/>


    <TextView
            android:id="@+id/txtPANCard"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/pan_card"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey" android:layout_marginHorizontal="10dp"/>

    <TextView
            android:id="@+id/txtBankPassbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingBottom="10dp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/bank_passbook"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey" android:layout_marginHorizontal="10dp"/>
    <TextView
            android:id="@+id/txtAadharCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:paddingBottom="10dp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/adhar_card"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey" android:layout_marginHorizontal="10dp"/>
    <TextView
            android:id="@+id/txtDrivingLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="18sp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/driving_licence"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey" android:layout_marginHorizontal="10dp"/>

    <TextView android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:text="@string/vehicle_document"
              android:layout_margin="15dp"
              android:textSize="20sp"
              android:textColor="#000000"
              android:textStyle="bold"/>
    <TextView
            android:id="@+id/txtVehicleRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="@string/vehicle_registration"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey"
          android:layout_marginHorizontal="10dp"/>
    <TextView
            android:id="@+id/txtVehicleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:text="Vehicle Image"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/grey"
          android:layout_marginHorizontal="10dp"/>
</LinearLayout>