<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:background="@color/white">

    <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:id="@+id/middle"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_water_delivery"
            android:layout_below="@id/textView"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

    <RelativeLayout
            android:id="@+id/Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbackground"
            android:layout_below="@id/textView2"
            android:layout_toStartOf="@+id/middle"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_centerInParent="true"
                android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/no_back"
            android:layout_below="@id/textView2"
            android:layout_toEndOf="@+id/middle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_centerInParent="true"/>
    </RelativeLayout>


</RelativeLayout>