<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
               android:layout_centerVertical="true"
              android:orientation="vertical"
              android:layout_gravity="center_vertical"
              android:paddingBottom="10dp"
              android:layout_margin="10dp"
                android:background="@color/white">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_location"
            android:padding="5dp"
            android:background="@color/colorPrimary"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/have_you_reached"
            android:layout_below="@id/textView"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="horizontal"
                  android:layout_marginTop="10dp"
    >


        <RelativeLayout
                android:id="@+id/YesReachLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbackground"
                android:layout_below="@id/textView2"
                android:layout_toStartOf="@+id/middle"
                android:layout_marginEnd="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorAccent"/>
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/NoReachLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/no_back"
                android:layout_below="@id/textView2"
                android:layout_toEndOf="@+id/middle"
                android:layout_marginStart="10dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>

    </LinearLayout>






</LinearLayout>